--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -43,7 +43,7 @@ jobs:
           name: linuxBuild
           path: 'export/linux/bin'
   buildHTML5:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -54,7 +54,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install Haxelib
         run: |
-          haxelib setup C:/haxelib
+          haxelib setup ~/haxelib
           haxelib install lime
           haxelib install openfl
           haxelib install flixel
